# ai

./: .gitignore  README.md  SOLUTION_DESIGN.md
.github/workflows/: ci.yml  deploy.yml
agents/: customer_health.py  pipeline_health.py  router.py
agents/monitoring/: monitor.py
agents/tools/: vector_search.py
eval/: golden_dataset.json  run_eval.py
frontend/: index.html  package.json
frontend/src/: types.ts
infra/databricks/: dlt_pipeline_config.json  setup_catalog.py
ingestion/: snowflake_sync.py
ingestion/kafka/: salesforce_connector.json
job-agent/: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
job-agent/profile/: user_profile.json
sales-companion/: .gitignore  Makefile  architecture.md  pyproject.toml  requirements.txt
sales-companion/agents/: llm.py
sales-companion/agents/monitoring/: groundedness.py
sales-companion/agents/tools/: text_to_sql.py
sales-companion/frontend/: .env.example
sales-companion/frontend/src/: App.tsx
sales-companion/frontend/src/components/: FeedbackBar.tsx  QueryInput.tsx  SqlDrawer.tsx
sales-companion/infra/databricks/: workflow_sprint1.json
sales-companion/infra/terraform/: frontend.tf  msk.tf
sales-companion/ingestion/: document_pipeline.py
sales-companion/ingestion/kafka/: account_connector.json  dlt_pipeline.py  topics.py
sales-companion/scripts/: deploy_serving.py
sales-companion/serving/: auth.py  main.py
sales-companion/tests/: test_router.py  test_text_to_sql.py
scripts/: deploy_frontend.sh
serving/: models.py
tests/: test_serving.py
(+5 files in other folders)
