[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sales-companion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "databricks-sdk>=0.20.0",
  "databricks-vectorsearch>=0.22",
  "mlflow>=2.10.0",
  "pyspark>=3.5.0",
  "delta-spark>=3.0.0",
  "snowflake-connector-python>=3.6.0",
  "snowflake-sqlalchemy>=1.5.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "pymupdf>=1.23.0",
  "python-docx>=1.1.0",
  "tiktoken>=0.6.0",
  "langchain>=0.1.0",
  "langchain-community>=0.0.20",
  "langgraph>=0.0.30",
  "anthropic>=0.20.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.0.0",
  "kafka-python>=2.0.2",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.26.0",
  "ruff>=0.2.0",
  "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "serving*", "ingestion*", "eval*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["agents", "serving", "ingestion", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
